# rs-keymap-parser

./: Cargo.toml  README.md  roundtrip.reaperkeymap  test-from-struct.reaperkeymap
resources/: LargeIntegrationTest.ReaperKeyMap  Untitled.ReaperMenuSet  custom_action_test.ReaperKeyMap  large-integration-test.ReaperKeyMap
src/: action_configs.rs  action_list.rs  keycodes.rs  lib.rs  main.rs  modifiers.rs  parse.rs  sections.rs  special_inputs.rs
tests/: integration_roundtrip.rs  large_integration_test.rs
